--- a/Snacktacular/Base.lproj/Main.storyboard
+++ b/Snacktacular/Base.lproj/Main.storyboard
@@ -132,7 +132,7 @@
                                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
-                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ycc-Ma-B1D" customClass="SpotPhotosCollectionViewCell" customModule="Snacktacular" customModuleProvider="target">
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="ycc-Ma-B1D" customClass="SpotPhotosCollectionViewCell" customModule="Snacktacular" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -558,7 +558,7 @@
                                                         <constraint firstAttribute="width" constant="51" id="mOm-oZ-PT1"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3wD-5M-AD7">
@@ -633,12 +633,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" leftItemsSupplementBackButton="YES" id="zOV-0H-5Ky">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="p68-TR-WC6">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="p68-TR-WC6">
                             <connections>
                                 <action selector="cancelButtonPressed:" destination="xps-yl-FRV" id="W05-S6-vMx"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="JB0-I9-jb5">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="JB0-I9-jb5">
                             <connections>
                                 <action selector="saveButtonPressed:" destination="xps-yl-FRV" id="gAR-eE-vnx"/>
                             </connections>
@@ -653,8 +653,8 @@
                         <outlet property="nameLabel" destination="8qm-ya-ld4" id="dbO-fa-h9S"/>
                         <outlet property="postedByLabel" destination="HJh-aa-ftV" id="DwH-lK-Db7"/>
                         <outlet property="reviewDateLabel" destination="KUr-JM-YHV" id="nRG-eg-ZM0"/>
-                        <outlet property="reviewTitle" destination="6WX-Av-omM" id="EAO-Qt-k7q"/>
-                        <outlet property="reviewView" destination="3wD-5M-AD7" id="nWe-7e-CEs"/>
+                        <outlet property="reviewTextView" destination="3wD-5M-AD7" id="nWe-7e-CEs"/>
+                        <outlet property="reviewTitleField" destination="6WX-Av-omM" id="EAO-Qt-k7q"/>
                         <outlet property="saveBarButton" destination="JB0-I9-jb5" id="eS8-02-tdd"/>
                         <outletCollection property="starButtonCollection" destination="yMX-0O-oi5" collectionClass="NSMutableArray" id="CeK-Cu-xh1"/>
                         <outletCollection property="starButtonCollection" destination="szF-zC-r2A" collectionClass="NSMutableArray" id="EUI-MV-ESw"/>
